--- a/hugo2/config.toml
+++ b/hugo2/config.toml
@@ -30,7 +30,7 @@ googleAnalytics = "" # Enable Google Analytics by entering your tracking id
 [Params.sidebar]
   home = "right"   # Configure layout for home page
   list = "right"   # Configure layout for list pages
-  single = "right" # Configure layout for single pages
+  single = "" # Configure layout for single pages
   # Enable widgets in given order
   widgets = ["recent", "categories", "taglist"]
 
