--- a/tech/package.json
+++ b/tech/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "markdown-it-mathjax3": "^4.3.2",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3"
   },
